  * Fix the manual upgrade steps for namespace in the UPGRADE.txt document.
    Reported by an anonymous user.
  * Fix an issue in which non-image file uploads could fail on some operating
    systems.  Reported by an anonymous user.
  * Fix an invalid "You may not remove ROLE_SYSADMIN from your own account"
    message on the Special:Roles page when updating the sysadmin account.


0.9.1
=====

New Features:

  * Support added for the {{DISPLAYTITLE}} magic word.

Bugfixes:

  * __NOEDITSECTION__ was being improperly stripped from topics.
  * Fix a potental JDBC error with FORWARD_ONLY result sets when parsing
    deleted topics.  Reported by cmasuch.
  * Case-insensitive topic names and deleted topics were not being properly
    updated in the cache.
  * Exclude redirects when calculating the number of articles using the
    NUMBEROFARTICLES magic word.
  * Upgrade to Lucene Search 3.0.2 to resolve a LockObtainFailedException
    error.  Reported by TimStone.


0.9.0
=====

New Features:

  * Signficant updates to the syntax parser, including support for additional
    HTML tags and XHTML transitional validation of tag attributes.
  * New Special:VirtualWiki page for administering virtual wikis and
    namespaces, including the ability to configure translated / alternate
    namespaces and to change the default virtual wiki from "en".
  * Support the #if: and the #ifeq parser functions.  Usage:
    "{{#if: test | true | false}}" and "{{#ifeq: 1 | 2 | true | false}}".
  * Basic support for the #expr: parser function.  Only basic operations are
    supported (+, -, /, *) and parentheses must be used to ensure that the
    order of operations is followed.
  * Support added for the {{ns:}} and {{nse:}} parser functions.
  * Support Mediawiki's {{subst:}} syntax.  Usage: {{subst:template}}.
  * Support added for the __NOEDITSECTION__ behavior switch.
  * Support added for the {{NUMBEROFARTICLES}}, {{REVISIONUSER}} and
    {{REVISIONID}} magic words.